--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,13 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: pnpm/action-setup@v2
+        with:
+          version: latest
+
       - uses: actions/setup-node@v2
         with:
           node-version: v16
           registry-url: https://registry.npmjs.org/
           cache: 'pnpm'
 
-      - run: npm i pnpm -g
       - run: pnpm install
       - run: npx conventional-github-releaser -p angular
         continue-on-error: true
