--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: v16
+          node-version: 16
           registry-url: https://registry.npmjs.org/
           cache: 'pnpm'
 
