--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dev": "vite",
     "build": "tsc && vite build && api-extractor run",
     "build-demo": "DEMO=demo vite build",
+    "test": "uvu tests -i utils",
     "preview": "vite preview",
     "fmt": "prettier -w .",
     "release": "npx bumpp package.json --commit \"release: v\" --push --tag"
@@ -31,6 +32,7 @@
     "prettier": "^2.4.1",
     "typescript": "^4.4.4",
     "unocss": "^0.9.3",
+    "uvu": "^0.5.2",
     "vite": "^2.6.14"
   },
   "peerDependencies": {
