--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "unocss-preset-typography",
   "version": "0.1.1",
   "description": "Typography Preset for UnoCSS",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.mjs",
+  "engines": {
+    "node": ">=14.18"
+  },
+  "type": "module",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     }
   },
