--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "type": "module",
   "types": "./dist/index.d.ts",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "exports": {
     ".": {
       "import": "./dist/index.js",
