--- a/package.json
+++ b/package.json
@@ -7,14 +7,7 @@
   },
   "type": "module",
   "types": "./dist/index.d.ts",
-  "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    }
-  },
+  "exports": "./dist/index.js",
   "files": [
     "dist"
   ],
@@ -33,6 +26,7 @@
     "@types/estree": "^0.0.50",
     "@types/node": "^16.11.10",
     "@ydcjeff/prettier-config": "^1.2.0",
+    "jiti": "^1.12.9",
     "marked": "^4.0.5",
     "prettier": "^2.5.0",
     "typescript": "^4.5.2",
