--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
     "release": "npx bumpp package.json --commit \"release: v\" --push --tag"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.19.1",
+    "@microsoft/api-extractor": "^7.19.2",
     "@types/estree": "^0.0.50",
-    "@types/node": "^16.11.12",
+    "@types/node": "^17.0.0",
     "@ydcjeff/prettier-config": "^0.1.0",
-    "marked": "^4.0.6",
+    "marked": "^4.0.7",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.2",
-    "unocss": "^0.15.6",
+    "typescript": "^4.5.4",
+    "unocss": "^0.16.4",
     "uvu": "^0.5.2",
-    "vite": "~2.6.14"
+    "vite": "^2.7.3"
   },
   "peerDependencies": {
-    "unocss": "^0.15.6"
+    "unocss": "^0.16.4"
   },
   "prettier": "@ydcjeff/prettier-config",
   "repository": {
