--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unocss-preset-typography",
-  "version": "0.3.0",
+  "version": "0.4.0-beta.0",
   "description": "Typography Preset for UnoCSS",
   "engines": {
     "node": ">=14.18"
@@ -21,19 +21,19 @@
     "release": "npx bumpp package.json --commit \"release: v\" --push --tag"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.19.3",
+    "@microsoft/api-extractor": "^7.19.4",
     "@types/estree": "^0.0.50",
-    "@types/node": "^17.0.7",
+    "@types/node": "^17.0.10",
     "@ydcjeff/prettier-config": "^0.1.0",
-    "marked": "^4.0.8",
+    "marked": "^4.0.10",
     "prettier": "^2.5.1",
-    "typescript": "^4.5.4",
-    "unocss": "^0.20.4",
-    "uvu": "^0.5.2",
-    "vite": "^2.7.10"
+    "typescript": "^4.5.5",
+    "unocss": "^0.22.5",
+    "uvu": "^0.5.3",
+    "vite": "^2.7.13"
   },
   "peerDependencies": {
-    "unocss": "^0.20.4"
+    "unocss": "<1"
   },
   "prettier": "@ydcjeff/prettier-config",
   "repository": {
