--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unocss-preset-typography",
-  "version": "0.4.0-beta.0",
+  "version": "0.4.0",
   "description": "Typography Preset for UnoCSS",
   "engines": {
     "node": ">=14.18"
